# AiExternal

./: .gitignore  CMakeLists.txt  README.md  build.sh  dumper.cpp  dumper.hpp  engine.hpp  executor.hpp  exploit.h  hack.cpp  offsets.h
.github/workflows/: build.yml
macho/: macho.hpp
memory/: memory.hpp
roblox/: offsets.hpp  string.hpp
scanner/: ida_dumper.py  scanner.hpp
